<resources>
    <string name="app_name">Cleanciti</string>
    <string name="cleanciti">CleanCiti</string>
    <string name="environmental_management">Environmental Management</string>
    <string name="field_worker_login">Field Worker Login</string>
    <string name="employee_id">Team ID</string>
    <string name="password">PASSWORD</string>
    <string name="enter_your_id">Enter ID</string>
    <string name="loginn">Login</string>
    <string name="passwordPlaceholder">••••••••</string>
    <string name="trash_pickup_image">trash_pickup_image</string>
    <string name="or">OR</string>
    <string name="report_anonymously">Report Anonymously</string>
    <string name="home">Home</string>
    <string name="reports">Reports</string>
    <string name="profile">Profile</string>
    <string name="have_an_account">Have an account?</string>
    <string name="a_field_worker">A field worker?</string>
    <string name="add_photo">Add Photo</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="new_waste_report">New Waste Report</string>
    <string name="describe_the_issue">Describe the issue...</string>
    <string name="submit_report">Submit Report</string>
    <string name="uploadimage">uploadImage</string>
    <string name="locating">Locating...</string>
    <string name="upload">upload</string>
    <string name="location_icon">location_icon</string>
    <string name="operational_stats">Operational Stats</string>
    <string name="ga_central_municipality">Ga Central Municipality</string>
    <string name="hello_team_a">Hello, Team A</string>
    <string name="_12">00</string>
    <string name="new_reports">New Reports</string>
    <string name="_05">00</string>
    <string name="collected">✓ Collected</string>
    <string name="recent_activity">Recent Activity</string>
    <string name="submit_reportt">Submit Report</string>
    <string name="submitting">Submitting...</string>
    <string name="gps_active">GPS Active</string>
    <string name="location_available">Location available</string>
    <string name="hello">Hello, %1$s</string>
    <string name="logging_in">Logging in...</string>
    <string name="sign_up_with_phone">Sign Up with Phone</string>
    <string name="phone_number">Phone Number</string>
    <string name="_233">+233</string>
    <string name="_50_123_4567">50 123 4567</string>
    <string name="we_ll_send_a_6_digit_code_to_verify_your_number">We\'ll send a 6-digit code to verify your number.</string>
    <string name="get_verification_code">Get Verification Code</string>
    <string name="send_verification_code">Send Verification Code</string>
    <string name="sign_in_with_phone">Sign In with Phone</string>
    <string name="enter_the_6_digit_code_sent_to_233">Enter the 6 digit code sent to +233...</string>
    <string name="verify_your_number">Verify your number</string>
    <string name="_0">0</string>
    <string name="didn_t_receive_a_code_resend">Didn\'t receive a code? Resend</string>
    <string name="verify_amp_continue">Verify &amp; Continue</string>
    <string name="enter_the_6_digit_code_sent_to">Enter the 6-digit code sent to %1$s</string>
    <string name="resend_code_in_s">Resend code in %1$ds</string>
    <string name="sending_code">Sending Code...</string>
    <string name="verifying">Verifying...</string>
    <string name="logo">logo</string>
    <string name="user">User</string>
    <string name="_233_">+233...</string>
    <string name="reporter">Reporter</string>
    <string name="joined_march_2026">Joined March 2026</string>
    <string name="logout">Logout</string>
    <string name="help">help</string>
    <string name="joined">Joined %1$s</string>
    <string name="user_">User_%1$s</string>
    <string name="assigned_tasks">Assigned Tasks</string>
    <string name="no_reports_assigned_to_your_team">No reports assigned to your team</string>
    <string name="confirm_collected">Confirm Collection</string>
    <string name="updating">Updating...</string>
    <string name="delete_account">Delete Account</string>
    <string name="organic_waste">Organic Waste</string>
    <string name="ga_west_manhean">Ga West, Manhean</string>
    <string name="collect">Collect</string>
    <string name="waste_image">waste image</string>
    <string name="verify_collection">Verify Collection</string>
</resources>