<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    app:cardBackgroundColor="#1c261e"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_collection"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_marginTop="13dp"
            app:cardCornerRadius="12dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/ivModalReportImg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/waste_image"
                android:scaleType="centerCrop"
                android:background="@drawable/input_background" />
        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnVerifyAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:minHeight="60dp"
            android:paddingVertical="12dp"
            android:backgroundTint="#13ec49"
            android:text="@string/confirm_collected"
            android:textColor="#0f170f"
            android:textSize="12sp"
            android:textStyle="bold"
            app:cornerRadius="12dp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>